# zylix

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  WORK_IN_PROGRESS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: android-e2e-tests.yml  ci.yml  cross-platform-tests.yml  ios-e2e-tests.yml  release.yml
bindings/python/: LICENSE  README.md  pyproject.toml
bindings/python/src/zylix_test/: __init__.py  client.py  element.py  selectors.py  types.py
bindings/python/src/zylix_test/drivers/: __init__.py  android.py  base.py  ios.py  macos.py  watchos.py  web.py
bindings/typescript/: README.md  package-lock.json  package.json  tsup.config.ts
core/: build.zig
core/include/: zylix.h  zylix_tooling.h
core/src/: abi.zig  arena.zig  async.zig  component.zig  css.zig  diff.zig  dsl.zig  events.zig  gpu.zig  hot_reload.zig  layout.zig  llm.zig  main.zig  particles.zig  queue.zig  router.zig  scheduler.zig  state.zig  store.zig  todo.zig  vdom.zig  wasm.zig
docs/: ABI.md  API_REFERENCE.md  ARCHITECTURE.md  COMPATIBILITY.md  CONSISTENCY_AUDIT.md  DOCUMENTATION_AUDIT.md  M5STACK_FEASIBILITY.md  M5STACK_IMPLEMENTATION_PLAN.md  PHASE2_DESIGN.md  PLAN.md  ROADMAP.ja.md  ROADMAP.md  TESTING.md  TUTORIALS_PLAN.md  UPDATE_CHECKLIST.md  ZIGDOM.md  ZYLIX_TEST_FRAMEWORK.md  heybot-implementation-plan.md
docs/API/: README.md
docs/designs/: v0.10.0-device-features.md  v0.11.0-v0.12.0-optimization-docs.md  v0.13.0-animation.md  v0.14.0-3d-graphics.md  v0.15.0-game-engine.md  v0.9.0-zylix-ai.md
samples/: README.md
scripts/: test.sh  zylix
site/: .gitignore  README.md  go.mod  go.sum  hugo.yaml  vercel.json
tests/: package-lock.json  package.json
(+585 files in other folders)
