[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zylix-test"
version = "0.8.0"
description = "Cross-platform E2E testing for iOS, watchOS, Android, macOS, and Web"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Zylix Contributors" }
]
keywords = [
    "testing",
    "e2e",
    "automation",
    "ios",
    "android",
    "macos",
    "watchos",
    "web",
    "webdriver",
    "appium",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/kotsutsumi/zylix"
Documentation = "https://zylix.dev/docs"
Repository = "https://github.com/kotsutsumi/zylix"
Issues = "https://github.com/kotsutsumi/zylix/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zylix_test"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
